<resources>
    <string name="app_name">CodeMath</string>
    <string name="decimal">.</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="all_clear">AC</string>
    <string name="divide">/</string>
    <string name="backspace">⌫</string>
    <string name="seven">7</string>
    <string name="nine">9</string>
    <string name="time">x</string>
    <string name="eight">8</string>
    <string name="minus">-</string>
    <string name="modulo">%</string>
    <string name="six">6</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="add">+</string>
    <string name="screenView">0</string>
    <string name="empty" />
    <string name="emotion">How do you feel today?</string>
</resources>