<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttondec"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="640dp"
        android:text="@string/decimal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button0"
        style="@style/Button"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:onClick="numberAction"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@id/buttondec"
        app:layout_constraintTop_toTopOf="@id/buttondec" />

    <Button
        android:id="@+id/button_equal"
        style="@style/Button"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/periwinkle"
        android:onClick="equalsAction"
        android:text="@string/equal"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toTopOf="@id/button0" />

    <Button
        android:id="@+id/buttonac"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/periwinkle"
        android:text="@string/all_clear"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintStart_toStartOf="@id/button7"
        android:onClick="allClearAction"/>

    <Button
        android:id="@+id/button_mod"
        style="@style/Button"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/blue"
        android:onClick="operationAction"
        android:text="@string/modulo"
        app:layout_constraintBottom_toTopOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button8" />

    <Button
        android:id="@+id/button_divide"
        style="@style/Button"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/divide"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/button_time"
        app:layout_constraintStart_toEndOf="@id/button_mod"
        android:onClick="operationAction"/>

    <Button
        android:id="@+id/buttondel"
        style="@style/Button"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/backspace"
        android:backgroundTint="@color/periwinkle"
        app:layout_constraintBottom_toTopOf="@id/button8"
        app:layout_constraintStart_toEndOf="@id/buttonac"
        android:onClick="backspaceAction"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginBottom="30dp"
        android:text="@string/seven"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintStart_toStartOf="@id/button4"
        android:onClick="numberAction"/>

    <Button
        android:id="@+id/button9"
        style="@style/Button"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button8"
        android:onClick="numberAction"/>

    <Button
        android:id="@+id/button_time"
        style="@style/Button"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/time"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button9"
        android:onClick="operationAction"/>

    <Button
        android:id="@+id/button8"
        style="@style/Button"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@id/button5"
        app:layout_constraintStart_toEndOf="@id/button7"
        android:onClick="numberAction"/>

    <Button
        android:id="@+id/button_minus"
        style="@style/Button"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/minus"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/button_add"
        app:layout_constraintStart_toEndOf="@id/button6"
        android:onClick="operationAction"/>

    <Button
        android:id="@+id/button6"
        style="@style/Button"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button5"
        android:onClick="numberAction"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginBottom="30dp"
        android:text="@string/four"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toStartOf="@id/button1"
        android:onClick="numberAction"/>

    <Button
        android:id="@+id/button5"
        style="@style/Button"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@id/button4"
        android:onClick="numberAction"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginBottom="30dp"
        android:text="@string/one"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttondec"
        app:layout_constraintStart_toStartOf="@id/buttondec"
        android:onClick="numberAction"/>

    <Button
        android:id="@+id/button2"
        style="@style/Button"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toEndOf="@+id/button1"
        android:onClick="numberAction"/>

    <Button
        android:id="@+id/button3"
        style="@style/Button"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/button_equal"
        app:layout_constraintStart_toEndOf="@id/button2"
        android:onClick="numberAction"/>

    <Button
        android:id="@+id/button_add"
        style="@style/Button"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/add"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/button_equal"
        app:layout_constraintStart_toEndOf="@id/button3"
        android:onClick="operationAction"/>

    <FrameLayout
        android:layout_width="369dp"
        android:layout_height="228dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <EditText
            android:id="@+id/screenCalc"
            android:layout_width="match_parent"
            android:layout_height="193dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:inputType="text"
            android:lines="2"
            android:maxLines="3"
            android:text="@string/screenView"
            android:textAlignment="textEnd"
            android:textSize="80sp" />
    </FrameLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="368dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Current Emotions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:entries="@array/emotion_array"
        android:prompt="@string/emotion"/>


</androidx.constraintlayout.widget.ConstraintLayout>